# cloakpivot

./: .gitignore  BREAKING_CHANGES.md  BUG_table_formatting_lost_when_masking.md  CHANGELOG.md  CHATGPT_COMPREHENSIVE_CODE_REVIEW.md  CI_IMPROVEMENTS.md  CLAUDE.md  COVERAGE_GAP_TODOS.md  FIX_SUMMARY_table_cell_artifacts.md  Makefile  PERFORMANCE.md  PRESIDIO_FINDINGS.md  README.md  TECHNICAL_PLAN_table_formatting_fix.md  TESTING.md  TEST_FAILURES.md  check_unit_tests.py  cloakpivot-workspace.code-workspace  cloakpivot.code-workspace  debug_anchors.py  debug_cloakmap.py  debug_large_doc.py  debug_output.txt  debug_policy.py  debug_round_trip.py  debug_specific.txt  debug_specific_failure.py  debug_test_error.py  debug_unmask.py  debug_unmask_simple.py  minimal_test.py  pii_cloak.py  policy.yaml  pyproject.toml  quick_test.py  run-cloakpivot.sh  run_single_test.py  run_tests.py  simple_test.py  simple_test_with_faker.py  (+9 more)
.github/: dependabot.yml
.github/workflows/: cache-metrics.yml  ci.yml  performance-monitoring.yml  pr-validation.yml  release.yml
benchmarks/: baseline_config.py
cloakpivot/: __init__.py  compat.py  defaults.py  deprecated.py  engine.py  engine_builder.py  engine_factory.py  loaders.py  registration.py  type_imports.py  wrappers.py
cloakpivot/cli/: __init__.py  batch.py  config.py  main.py  migration.py
cloakpivot/core/: __init__.py  analyzer.py  anchors.py  batch.py  chunking.py  cloakmap.py  cloakmap_enhancer.py  cloakmap_serializer.py  cloakmap_validator.py  config.py  detection.py  error_handling.py  exceptions.py  memory_optimization.py  model_info.py  normalization.py  parallel_analysis.py  performance.py  policies.py  policy_loader.py  presidio_mapper.py  results.py  security.py  strategies.py  surrogate.py  types.py  validation.py
cloakpivot/diagnostics/: __init__.py  collector.py  coverage.py  reporting.py
cloakpivot/document/: __init__.py  common.py  extractor.py  mapper.py  processor.py
cloakpivot/formats/: __init__.py  registry.py  serialization.py
cloakpivot/masking/: __init__.py  applicator.py  conflict_resolver.py  document_masker.py  document_reconstructor.py  engine.py  entity_processor.py  format_helpers.py  metadata_manager.py  presidio_adapter.py  protocols.py  strategy_executor.py  strategy_processors.py  template_helpers.py  text_processor.py
cloakpivot/migration/: __init__.py  deprecation_warnings.py  legacy_migrator.py
cloakpivot/observability/: __init__.py  config.py  health.py  logging.py  metrics.py
cloakpivot/plugins/: PLUGIN_DEVELOPMENT_GUIDE.md  __init__.py  base.py  exceptions.py  policy_extensions.py  registry.py  strategy_applicator.py
cloakpivot/policies/: __init__.py
cloakpivot/presidio/: __init__.py  advanced_features.py  batch_processor.py  key_management.py
cloakpivot/storage/: __init__.py  config.py  registry.py
cloakpivot/unmasking/: __init__.py  anchor_resolver.py  cloakmap_loader.py  document_unmasker.py  engine.py  presidio_adapter.py
cloakpivot/utils/: __init__.py
config/policies/: balanced.yaml  permissive.yaml
data/: .gitignore  README.md
data/docling/: financial_report.docling.json
data/json/: 2025-07-03-Test-PDF-Styles.docling.json  2025-07-03-Test-PDF-Styles.lexical.json  email.docling.json  email.lexical.json  email_unmasked.docling.json
data/pdf/: README.md
data/text/: employee_record.txt
docs/: API.md  MIGRATION.md  Makefile  WORKFLOW_DIAGRAMS.md  conf.py  index.rst  requirements-docs.txt  surrogate_generation.md
docs/_static/: custom.css  custom.js
docs/api/: core.rst  document.rst  formats.rst  masking.rst  policies.rst  unmasking.rst
docs/cli/: mask_command.rst  overview.rst  policy_commands.rst
docs/development/: contributing.rst
docs/notebooks/: 01_getting_started.ipynb  02_policy_development.ipynb
docs/review/: ASSESSMENT.md  BASELINE.md  BOUNDARIES.md  CHANGESET_PLAN.md  DEPRECATIONS.md  DRY_MAP.md  REMAINING_TEST_FAILURES.md  TEST_GAPS.md  TEST_IMPACT.md  TRACKING_TODO.md  complexity.txt  example_imports.txt  findings.csv  symbols_sample.txt  test_imports.txt  vulture.txt
examples/: ISSUE_MASKING_BUG.md  ISSUE_TABLE_MASKING.md  advanced_builder_features.py  advanced_usage.py  docling_integration.py  docling_to_lexical_workflow.py  document_integration_example.py  generate_test_data.py  local_storage_example.md  pdf_masking_with_localstorage.py  pdf_workflow.py  presidio_config.yml  presidio_integration_example.py  simple_usage.py  surrogate_faker_strategy.py
policies/: README.md  surrogate.yaml
scripts/: __init__.py  analyze-cache-performance.py  audit_fixtures.py  ci-setup.sh  final_performance_validation.py  generate-performance-trends.py  measure_baseline.py  performance_regression_analysis.py  setup-models.py
specification/: 2025-09-15-CODE_REVIEW_PLAN.md  BUG_segments_corrupted_when_masking_v1.7.0.md  CLEANUP_PLAN.md  CLOAKPIVOT_MIGRATION_GUIDE.md  DOCLING_V1.7.0_MIGRATION.md  NEW_TEST_PLAN.md  cloakpivot_implementation_plan.md  cloakpivot_refactor_prd.md  code-review-for-presidio-package-usage.md  documentation_recreation_plan.md  implementation_summary.md  index.md  presidio-full-integration.md  testing_update_plan.md
tests/: __init__.py  conftest.py  parallel_support.py  test_analyze_cache_performance.py  test_analyzer.py  test_analyzer_integration.py  test_anchors.py  test_batch_cli.py  test_batch_processing.py  test_cli.py  test_cloak_engine.py  test_cloak_engine_builder.py  test_cloak_engine_examples.py  test_cloak_engine_simple.py  test_cloakmap.py  test_configuration.py  test_coverage.py  test_defaults.py  test_detection.py  test_diagnostics.py  test_document_integration.py  test_enhanced_strategies.py  test_entity_conflict_resolution.py  test_error_handling.py  test_final_validation.py  test_fixture_scoping.py  test_formats.py  test_loaders.py  test_masking_engine.py  test_masking_integration.py  test_normalization.py  test_observability.py  test_package.py  test_parallel_analysis.py  test_parallel_execution.py  test_plugin_examples_simple.py  test_plugins.py  test_policies.py  test_policy_loader.py  test_property_masking.py  (+13 more)
(+139 files in other folders)
