[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloakpivot"
version = "2.0.0"
description = "Simple, reversible PII masking for documents with one-line API"
authors = [
    {name = "hernamesbarbara", email = "austin@aya.sh"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["pii", "privacy", "document", "masking", "presidio", "docling", "data-privacy", "gdpr", "anonymization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "docling>=1.7.0",
    "docling-core>=1.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "docpivot @ git+https://github.com/hernamesbarbara/docpivot.git@main",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "types-click",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "types-PyYAML",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.88.0",  # Property-based testing
    "pytest-xdist>=3.0.0", # Parallel test execution
    "pytest-timeout>=2.1.0", # Test timeout support
]

[project.scripts]
cloakpivot = "cloakpivot.cli.main:main"

# Plugin entry points removed in v2.0 for simplification

[project.urls]
"Homepage" = "https://github.com/hernamesbarbara/cloakpivot"
"Bug Tracker" = "https://github.com/hernamesbarbara/cloakpivot/issues"
"Documentation" = "https://github.com/hernamesbarbara/cloakpivot/tree/main/docs"
"Source" = "https://github.com/hernamesbarbara/cloakpivot"

[tool.setuptools.packages.find]
where = ["."]
include = ["cloakpivot*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
files = ["cloakpivot/cli"]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "docpivot.*",
    "pytest_xdist.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "asyncio: marks tests as asyncio tests",
    "unit: marks tests as unit tests (fast, isolated component tests)",
    "integration: marks tests as integration tests (component interaction tests)",
    "e2e: marks tests as end-to-end tests (full workflow tests)",
    "golden: marks tests as golden file regression tests",
    "performance: marks tests as performance benchmark tests",
    "slow: marks tests as slow running tests (> 30 seconds)",
    "property: marks tests as property-based tests using Hypothesis",
]
# Test discovery
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__"
]
# Timeout settings - requires pytest-timeout plugin
timeout = 300
timeout_method = "thread"

# Parallel execution configuration
# Use environment variables to control parallel execution:
# - PYTEST_WORKERS: explicit worker count override
# - PYTEST_DIST: distribution strategy (loadfile, loadscope, worksteal)
# - PYTEST_MAX_WORKERS: maximum worker limit
# Default behavior: auto-detect optimal worker count based on CPU cores

[tool.coverage.run]
source = ["cloakpivot"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
